<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable name="listener"
        type="com.vakoms.meshly.fragments.login.ForgotPasswordFragment"/>
</data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/main_top_bar">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:visibility="visible"
            android:onClick="@{listener.onBackClicked}">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/back_details"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <com.vakoms.meshly.views.font.CustomTextView
            app:custom_font="@string/font_helvetica_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:text="@string/forgotten_passoword" />

        <com.vakoms.meshly.views.font.CustomTextView
            app:custom_font="@string/font_helvetica_regular"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="@{listener.onDoneClicked}"
            android:layout_alignParentRight="true"
            android:text="@string/done"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:paddingRight="15dp" />


    </RelativeLayout>

   <com.vakoms.meshly.views.font.CustomEditText
       app:custom_edit_text_font="@string/font_helvetica_thin"
        android:id="@+id/etEmail"
       android:textCursorDrawable="@drawable/custom_cursor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_margin="5dp"
        android:hint="@string/email"
        android:textColor="@color/white_transparent_50"
        android:padding="5dp"
        android:singleLine="true"
        android:inputType="textEmailAddress"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white_transparent_25"/>
    <com.vakoms.meshly.views.font.CustomTextView
        app:custom_font="@string/font_helvetica_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:text="@string/type_in_your_email" />


</LinearLayout>
</layout>