<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="listener"
            type="com.vakoms.meshly.interfaces.PhotoDialogListener" />
    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp">

    <com.vakoms.meshly.views.font.CustomTextView
        app:custom_font="@string/font_helvetica_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_photo_source"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="20sp"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"

        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ib_Gallery_DialogSelectPhotoSource"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="@{listener.onDialogPhotoGallery}"
            android:background="@drawable/background_image_background"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_gallery" />

        <com.vakoms.meshly.views.font.CustomTextView
            app:custom_font="@string/font_helvetica_thin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_from_galery"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ib_Camera_DialogSelectPhotoSource"
            android:onClick="@{listener.onDialogPhotoCamera}"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/background_image_background"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_camera" />


        <com.vakoms.meshly.views.font.CustomTextView
            app:custom_font="@string/font_helvetica_thin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            android:textColor="@android:color/white"

            />
    </LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <com.vakoms.meshly.views.font.CustomTextView
        app:custom_font="@string/font_helvetica_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@{listener.onDialogPhotoCancel}"
        android:id="@+id/tv_cancel_DialogSelectPhotoSource"
        android:textSize="18sp"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="@android:color/white" />

</LinearLayout>

</layout>