<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="listener"
            type="com.vakoms.meshly.MainActivity"/>
    </data>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.vakoms.meshly.views.font.CustomTextView
            app:custom_font="@string/font_helvetica_thin"
            android:text="@string/please_enable_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white_transparent_50" />

        <com.vakoms.meshly.views.font.CustomTextView
            android:onClick="@{listener.onEnableLocationClicked}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:custom_font="@string/font_helvetica_thin" />
    </LinearLayout>
</layout>