<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="listener"
            type="com.vakoms.meshly.interfaces.DialogDeleteListener" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="3">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <com.vakoms.meshly.views.font.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/please_confirm_deletion"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:custom_font="@string/font_helvetica_regular" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white_transparent_50" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.vakoms.meshly.views.font.CustomTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{listener.onDialogDeleteCancel}"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/dialog_cancel"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:custom_font="@string/font_helvetica_regular" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/white_transparent_50" />

            <com.vakoms.meshly.views.font.CustomTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{listener.onDialogDeleteUser}"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/delete"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:custom_font="@string/font_helvetica_regular" />
        </LinearLayout>
    </LinearLayout>
</layout>