<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="listener"
            type="com.vakoms.meshly.fragments.login.SignUpFragment" />
    </data>


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/main_top_bar">



            <ImageView
               style="@style/AppTheme.Icon"
                android:onClick="@{listener.onBackClicked}"
                android:src="@drawable/ic_left_blue" />



       <com.vakoms.meshly.views.font.CustomTextView
           app:custom_font="@string/font_helvetica_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_sign_up_title_tv"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:text="Sign up" />

        <com.vakoms.meshly.views.font.CustomTextView
            app:custom_font="@string/font_helvetica_regular"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="@{listener.onDoneClicked}"
            android:layout_alignParentRight="true"
            android:text="Done"
            android:textColor="@color/blue"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:paddingRight="15dp"
            android:visibility="visible" />
    </RelativeLayout>

    <com.vakoms.meshly.views.font.CustomEditText
        app:custom_edit_text_font="@string/font_helvetica_thin"
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/email"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:padding="5dp"
        android:textColor="@color/text_color_login"
        android:layout_margin="5dp"
        android:inputType="textEmailAddress"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white_transparent_25"/>

    <com.vakoms.meshly.views.font.CustomEditText
        app:custom_edit_text_font="@string/font_helvetica_thin"
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@color/stroke_login"
        android:layout_margin="5dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:hint="@string/password"
        android:padding="5dp"
        android:inputType="textPassword"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white_transparent_25"/>
    <com.vakoms.meshly.views.font.CustomEditText
        app:custom_edit_text_font="@string/font_helvetica_thin"
        android:id="@+id/etPasswordAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_margin="5dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textColor="@color/text_color_login"
        android:hint="@string/again"
        android:padding="5dp"
        android:inputType="textPassword"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white_transparent_25"/>
</LinearLayout>
</layout>