<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="listener"
            type="com.vakoms.meshly.fragments.login.LocalLoginFragment" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/main_top_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:onClick="@{listener.onBackClicked}"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="visible">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/back_details" />
            </LinearLayout>

            <com.vakoms.meshly.views.font.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Log in"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:custom_font="@string/font_helvetica_regular" />

            <com.vakoms.meshly.views.font.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:onClick="@{listener.onDoneClicked}"
                android:paddingRight="15dp"
                android:text="@string/done"
                android:textColor="@color/blue"
                android:textSize="22sp"
                android:visibility="visible"
                app:custom_font="@string/font_helvetica_regular" />
        </RelativeLayout>


        <com.vakoms.meshly.views.font.CustomEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:hint="email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/white_transparent_50"
            android:textCursorDrawable="@drawable/custom_cursor"
            app:custom_edit_text_font="@string/font_helvetica_thin" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white_transparent_25" />

        <com.vakoms.meshly.views.font.CustomEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/white_transparent_50"
            android:textCursorDrawable="@drawable/custom_cursor"
            app:custom_edit_text_font="@string/font_helvetica_thin" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white_transparent_25" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.vakoms.meshly.views.font.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:gravity="center"
                android:onClick="@{listener.onForgotPasswordClicked}"
                android:text="@string/forgot_your_password"
                android:textColor="@color/blue"
                android:textSize="17sp"
                app:custom_font="@string/font_helvetica_regular" />


            <com.vakoms.meshly.views.font.CustomTextView
                android:id="@+id/tvSignUp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:background="@drawable/blue_rounded_stroke"
                android:gravity="center"
                android:onClick="@{listener.onSignUpClicked}"
                android:padding="15dp"
                android:text="@string/sign_up_here"
                android:textColor="@color/blue"
                android:textSize="18sp"
                app:custom_font="@string/font_helvetica_thin" />


            <com.vakoms.meshly.views.font.CustomTextView
                android:id="@+id/tvHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/tvSignUp"
                android:layout_centerHorizontal="true"
                android:text="@string/dont_have_any_account"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:custom_font="@string/font_helvetica_regular" />




        </RelativeLayout>


    </LinearLayout>

</layout>